# jpeg2000-reader

./: Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: binary.yml  docker.yml
src/jpeg2000_reader/: __main__.py
tests/assets/: black_4k.j2c  dbox.j2c  dcpinside.j2c  eclairnum_0.j2c  eclairnum_1.j2c  imax.j2c  intouchables.j2c
